codepkg/objects/Inventory_Snapshot__c.object
<CustomObject>
    <description>Custom Object for the manual data input of inventory snapshot from the inventory tracking database</description>
    <fields>
        <fullName>Available_Inventory_Quantity__c</fullName>
        <label>Available Inventory Quantity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price_Per_Unit__c</fullName>
        <label>Average Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cumulative_Total__c</fullName>
        <label>Cumulative Total</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procurement_Status__c</fullName>
        <label>Procurement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADA Masks</fullName>
                </value>
                <value>
                    <fullName>Adult Cloth Masks</fullName>
                </value>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>Automated Blood Pressure cuffs</fullName>
                </value>
                <value>
                    <fullName>Bedding Accessories</fullName>
                </value>
                <value>
                    <fullName>Bedding/Beds</fullName>
                    <label>Beds/Cots</label>
                </value>
                <value>
                    <fullName>Bedside Commodes</fullName>
                </value>
                <value>
                    <fullName>Bipap Machine</fullName>
                </value>
                <value>
                    <fullName>Blanket</fullName>
                </value>
                <value>
                    <fullName>Body Bags</fullName>
                </value>
                <value>
                    <fullName>Bouffant Caps</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Surgical/3-ply Masks</fullName>
                </value>
                <value>
                    <fullName>Children Cloth Masks</fullName>
                </value>
                <value>
                    <fullName>Children’s Cloth Masks</fullName>
                </value>
                <value>
                    <fullName>Children’s Surgical Masks</fullName>
                </value>
                <value>
                    <fullName>Cleaning Supplies</fullName>
                </value>
                <value>
                    <fullName>Cloth Masks</fullName>
                </value>
                <value>
                    <fullName>Collection Kits (medium, swab, vial)</fullName>
                </value>
                <value>
                    <fullName>Coveralls</fullName>
                </value>
                <value>
                    <fullName>Coveralls (Hospitals or EMS)</fullName>
                </value>
                <value>
                    <fullName>CPAP Machines</fullName>
                </value>
                <value>
                    <fullName>CPAP Masks</fullName>
                </value>
                <value>
                    <fullName>Crash Cart Med Kits</fullName>
                </value>
                <value>
                    <fullName>Examination Gloves</fullName>
                </value>
                <value>
                    <fullName>Face Shields</fullName>
                </value>
                <value>
                    <fullName>Face Shields (Disposable)</fullName>
                </value>
                <value>
                    <fullName>Glucometers</fullName>
                </value>
                <value>
                    <fullName>Goggles</fullName>
                </value>
                <value>
                    <fullName>Hand Sanitizer (8oz)</fullName>
                </value>
                <value>
                    <fullName>Hand Sanitizers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_Cost_to_Meet_Objective__c</fullName>
        <formula>Remaining_Total__c *  Average_Price_Per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Cost to Meet Objective</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Total__c</fullName>
        <formula>Revised_Target__c -  Cumulative_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revised_Target__c</fullName>
        <label>Revised Target</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cumulative_Total__c *  Average_Price_Per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Inventory Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Family__c</columns>
        <columns>Available_Inventory_Quantity__c</columns>
        <columns>Revised_Target__c</columns>
        <columns>Cumulative_Total__c</columns>
        <columns>Remaining_Total__c</columns>
        <columns>Average_Price_Per_Unit__c</columns>
        <columns>Remaining_Cost_to_Meet_Objective__c</columns>
        <columns>Total_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Inventory Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>